adding search-box component to implement searching images

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,3 +37,8 @@ code {
 .WarningTwoTone {
   font-size: 200%;
 }
+
+.searchBoxContainer {
+  height: 6rem !important;
+  width: 100% !important;
+}
